--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
             <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="card-parent">
                 <div class="card">
-                    <img src="./portfolio-resources/images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h3>Vanilla JavaScript</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
-                    <img src="./portfolio-resources/images/icons/react.png" alt="">
+                    <img src="./images/icons/react.png" alt="">
                     <h3>React</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
-                    <img src="./portfolio-resources/images/icons/nodejs.png" alt="">
+                    <img src="./images/icons/nodejs.png" alt="">
                     <h3>Node.js</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="card">
-                    <img src="./portfolio-resources/images/icons/mongo.png" alt="">
+                    <img src="./images/icons/mongo.png" alt="">
                     <h3>Node.js</h3>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
@@ -138,9 +138,9 @@
             <div class="footer-contact">
                 <h2>Lets Contact</h2>
                 <p>Please fill out the form on this section to contact with me or  call between <br> 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <img src="./portfolio-resources/images/icons/facebook.png" alt="">
-                <img src="./portfolio-resources/images/icons/twitter.png" alt="">
-                <img src="./portfolio-resources/images/icons/insta.png" alt="">
+                <img src="./images/icons/facebook.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/insta.png" alt="">
             </div>
             <div class="footer-message">
                 <h2>Let’s Message me</h2>
