--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="con-btn">Contact</button>
             </div>
-            <img src="portfolio-resources/images/hardy.png" alt="">
+            <img src="./images/hardy.png" alt="">
         </div>
     </header>
     <main>
